[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/LevelClear/LevelClear.gd" type="Script" id=1]
[ext_resource path="res://Fonts/kenvector_future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[node name="LevelClear" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.33936
margin_top = 5.33936
margin_right = 5.33936
margin_bottom = 5.33936
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLevel" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = 640.424
margin_top = 150.359
margin_right = 1190.42
margin_bottom = -729.64
custom_fonts/font = SubResource( 1 )
text = "LEVEL 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTimeLevel" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = 380.09
margin_top = 404.343
margin_right = 930.09
margin_bottom = -475.656
custom_fonts/font = SubResource( 1 )
text = "LEVEL 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelColectables" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = 380.09
margin_top = 568.268
margin_right = 930.09
margin_bottom = -311.731
custom_fonts/font = SubResource( 1 )
text = "LEVEL 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelRanked" type="Label" parent="."]
anchor_left = 0.091
anchor_top = 0.148
anchor_right = 0.361
anchor_bottom = 0.387
margin_left = 805.37
margin_top = 244.503
margin_right = 786.97
margin_bottom = 186.384
custom_fonts/font = SubResource( 1 )
text = "---"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay1" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLS2" type="Label" parent="ButtonPlay1"]
anchor_left = 0.003
anchor_top = -0.072
anchor_right = 1.0
anchor_bottom = 1.095
margin_left = -5.161
margin_top = -10.016
margin_right = -7.0
margin_bottom = -10.09
custom_fonts/font = SubResource( 2 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMenuLS" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_right = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLS2" type="Label" parent="ButtonMenuLS"]
anchor_left = 0.149
anchor_top = 0.276
anchor_right = 0.72
anchor_bottom = 0.735
margin_left = -35.663
margin_top = -45.236
margin_right = 47.36
margin_bottom = 31.915
custom_fonts/font = SubResource( 2 )
text = "Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonPlay1" to="." method="_on_ButtonPlay1_pressed"]
[connection signal="pressed" from="ButtonMenuLS" to="." method="_on_ButtonMenuLS_pressed"]
